--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <a href="#" class="primary-btn">Agendar</a>
         </div>
         <ul class="offcanvas__widget">
-            <li><a href="#" class=" text-white"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
+            <li><a href="#"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20</li>
             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
         </ul>
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <ul class="header__top__left">
-                            <li><a href="#" class=" text-white"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
+                            <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
                             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
                             </li>
                             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
@@ -190,6 +190,7 @@
                                                     <li><a href="#">Pré-natal</a></li>
                                                     <li><a href="#">Rotina</a></li>
                                                     <li><a href="#">Criança doente</a></li>
+                                                    <li><a href="#">Consulta de sono infantil</a></li>
                                                     <li><a href="#">Introdução alimentar</a></li>
                                                 </ul>
                                             </li>
@@ -252,7 +253,8 @@
 
                                                 <ul class="dropdown-sec">
                                                     <span>
-                                                        <li><a href="#">Galeria de fotos</a></li>
+                                                        <li><a href="#" class="primary-btn"> <i class="fa fa-lock"></i>
+                                                                Galeria de fotos</a></li>
                                                     </span>
                                                 </ul>
 
@@ -275,19 +277,15 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li>
-                                    <a class="arrow">Apoio ao domicílio <span class="dropdown-arrow"></span></a>
-                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
-                                        <ul class="dropdown menu grav">
-                                            <li><a href="#">Amamentação</a></li>
-                                            <li><a href="#">Enfermagem</a></li>
-                                            <li><a href="#">Teste do pezinho</a></li>
-                                            <li><a href="#">Pacotes</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-
-                                <!-- Serviços Adicionais -->
+                                <li><a class="arrow" href="./additional-services.html">Apoio ao domicílio <span
+                                            class="dropdown-arrow"></span></a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Amamentação</a></li>
+                                        <li><a href="#">Enfermagem</a></li>
+                                        <li><a href="#">Teste do pezinho</a></li>
+                                        <li><a href="#">Pacotes</a></li>
+                                    </ul>
+                                </li><!-- Serviços Adicionais -->
                                 <li><a class="arrow" href="./additional-services.html">Workshops<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
@@ -302,9 +300,9 @@
                                     </ul>
                                 </li>
                                 <a href="#" class="primary-btn" style="
-    right: 0;
-    position: absolute;
-"> <i class="fa fa-lock"></i> Área Reservada</a>
+                                        right: 0;
+                                        position: absolute;
+                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
