--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <a href="#" class="primary-btn">Agendar</a>
         </div>
         <ul class="offcanvas__widget">
-            <li><a href="#"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
+            <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20</li>
             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
         </ul>
@@ -243,8 +243,9 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <ul class="header__top__left">
-                            <li><i class="fa fa-phone"></i> +258 84 123 4567</li>
-                            <li><i class="fa fa-map-marker"></i> Cidade de Maputo, Av. Julius Nyerere, Nº 123</li>
+                            <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
+                            <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                            </li>
                             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
                         </ul>
                     </div>
