--- a/header.html
+++ b/header.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-lg-8">
                 <ul class="header__top__left">
-                    <li><a href="#" class="text-white"><img src="img/icons/contacto.png" class="fa mr-3" width="16"
+                    <li><a href="#" class="text-white"><img src="img/icons/contacto.png" class="fa mr-2" width="16"
                                 height="16" alt=""> +258 84 869 7194</a></li>
-                    <li><img src="img/icons/home.png" class="fa mr-3" width="16" height="16" alt=""> Edifício ou
+                    <li><img src="img/icons/home.png" class="fa mr-2" width="16" height="16" alt=""> Edifício ou
                         Shopping 24, Avenida 24 de Julho, Loja 20
                     </li>
-                    <li><img src="img/icons/horario.png" class="fa mr-3" width="16" height="16" alt=""> Seg a Sex 8:00
+                    <li><img src="img/icons/horario.png" class="fa mr-2" width="16" height="16" alt=""> Seg a Sex 8:00
                         às 18:00</li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Cirurgia</span>
+                                        <!-- <span>Cirurgia</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
                                             </li>
@@ -77,7 +77,7 @@
                                             <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
                                                     superficiais</a></li>
                                         </ul>
-                                        <br>
+                                        <br> -->
                                         <span>Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
