--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <ul class="offcanvas__widget">
             <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 1869 7194</a></li>
-            <li><img src="img/icons/home.png" class="fa mr-3" width="20" height="20" alt=""> Edifício ou Shopping 24,
+            <li><img src="img/icons/home.png" class="fa mr-2" width="20" height="20" alt=""> Edifício ou Shopping 24,
                 Avenida 24 de Julho, Loja 20</li>
             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
         </ul>
@@ -87,7 +87,7 @@
     <!-- Header Section Begin -->
     <header class="header">
         <div id="header-container">
-
+           
         </div>
     </header>
     <!-- Header Section End -->
@@ -110,42 +110,42 @@
                     <ul class="servocos d-flex flex-wrap justify-content-between">
                         <li>
                             <a href="pages/pediatria.html">
-                                <h4><strong><img src="img/icons/Pediatria.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/pediatria-alt.png" width="100" height="100"
                                             alt="Pediatria"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Pediatria</h4>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
-                                <h4><strong><img src="img/icons/Consulta Geral.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/consulta-alt.png" width="100" height="100"
                                             alt="Pediatria"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Consultas</h4>
                             </a>
                         </li>
                         <li>
                             <a href="pages/nutricao.html">
-                                <h4><strong><img src="img/icons/Nutrição.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/Nutrição-alt.png" width="100" height="100"
                                             alt="Nutrição"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Nutrição</h4>
                             </a>
                         </li>
                         <li>
                             <a href="pages/terapia.html">
-                                <h4><strong><img src="img/icons/Terapia Ocupacional.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/Terapia Ocupacional-alt.png" width="100" height="100"
                                             alt="Terapia Ocupacional"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Terapia Ocupacional</h4>
                             </a>
                         </li>
                         <li>
                             <a href="pages/pediatria.html">
-                                <h4><strong><img src="img/icons/pediatria.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/pediatria-alt.png" width="100" height="100"
                                             alt="Pediatria"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Pediatria</h4>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
-                                <h4><strong><img src="img/icons/Vacinação.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/Vacinação-alt.png" width="100" height="100"
                                             alt="Vacinação"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Vacinação</h4>
                             </a>
@@ -160,20 +160,20 @@
                         </li> -->
                         <li>
                             <a href="consultas.html">
-                                <h4><strong><img src="img/icons/Enfermagem.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/Enfermagem-alt.png" width="100" height="100"
                                             alt="Vacinação"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Enfermagem</h4>
                             </a>
                         </li>
                         <li>
-                            <h4><strong><img src="img/icons/Consulta do Viajante.png" width="100" height="100"
+                            <h4><strong><img src="img/icons/Consulta do Viajante-alt.png" width="100" height="100"
                                         alt="Nutrição"></strong></h4>
                             <h4 class="subtitle mt-4 fw-semibold">Medicina do Viajante</h4>
                             </a>
                         </li>
                         <li>
                             <a href="pages/pediatria.html">
-                                <h4><strong><img src="img/icons/pediatria.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/pediatria-alt.png" width="100" height="100"
                                             alt="Pediatria"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Pediatria</h4>
                             </a>
@@ -187,14 +187,14 @@
                         </li>
                         <li>
                             <a href="pages/pediatria.html">
-                                <h4><strong><img src="img/icons/Amamentação.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/Amamentação-alt.png" width="100" height="100"
                                             alt="Pediatria"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Preparação para a Amamentação</h4>
                             </a>
                         </li>
                         <li>
                             <a href="pages/pediatria.html">
-                                <h4><strong><img src="img/icons/Workshops.png" width="100" height="100"
+                                <h4><strong><img src="img/icons/Workshops-alt.png" width="100" height="100"
                                             alt="Pediatria"></strong></h4>
                                 <h4 class="subtitle mt-4 fw-semibold">Workshops</h4>
                             </a>
